...
                    .onDelete(perform: delete)
                    HStack {
                        Text("Subtotal").fontWeight(.semibold)
                        Spacer()
                        Text("SEK \(cartViewModel.subtotal.description)")
                            .fontWeight(.semibold)
                            .accessibility(identifier: "cart.subtotal")
                    }
                }
                .listStyle(.grouped)
                .environment(\.editMode, self.$isEditMode)

                VStack {
...
